--- a/api/package.json
+++ b/api/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.7",
     "express": "~4.16.1",
     "google-it": "^1.6.4",
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.10.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
