--- a/api/package.json
+++ b/api/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "~4.16.1",
     "google-it": "^1.6.4",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1",
     "morgan": "~1.9.1"
