--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{ "version": 2, "rewrites": [{ "source": "/index.js", "destination": "/api" }] }
+{ "version": 2, "builds": [{"src": "/index.js"}], "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
