--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{ "version": 2, "builds": [{ "src": "./api/index.js", "use": "@vercel/node" }], "routes": [{ "src": "/(.*)", "destination": "/" }] }
+{ "version": 2, "builds": [{ "src": "./api/index.js", "use": "@vercel/node" }], "routes": [{ "src": "/index.js", "dest": "/api" }] }
